# discord-bot

./: Cargo.toml  README.md  default.nix  flake.nix
src/: db.rs  main.rs
